[ENH] Specified a maximum length of the sessions - if reached, a new session is started
These new sessions hold the beacons configuration data and note it in the output session file.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -13,6 +13,7 @@
     <string name="settings_bluetooth_scan_interval_invalid">Debe ser un número natural</string>
     <string name="settings_open_battery_optimization_settings">Abrir configuración del optimizador de batería</string>
     <string name="settings_api_uri_change_message">Cerrarás sesión y tu información personal se compartirá a otro servicio. La Política de Privacidad y otras afirmaciones legales no serán de aplicación.</string>
+    <string name="settings_session_max_duration_summary">%1$d minutos después de haber comenzado una sesión, se parará y otra será iniciada.</string>
     <string name="version">Versión: %1$s (%2$d)</string>
     <string name="delete">Eliminar</string>
     <string name="was_deleted">Elemento eliminado</string>
@@ -164,5 +165,6 @@
     <string name="privacy_policy_title">Política de Privacidad</string>
     <string name="settings_api_uri_change_title">Confirma acción</string>
     <string name="client_deprecated_warning_title">¡Es momento de actualizar!</string>
+    <string name="settings_session_max_duration">Máxima duración de la sesión</string>
     <string name="manage_sessions_delete_session_file">Eliminar Fichero Sesión</string>
 </resources>
