--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,8 @@
     <string name="settings_open_battery_optimization_settings">Open battery optimization settings</string>
     <string name="settings_api_uri_change_title">Confirm action</string>
     <string name="settings_api_uri_change_message">This will log you out and your personal data will be shared to another endpoint. Privacy Policy and other legal claims won\'t apply.</string>
+    <string name="settings_session_max_duration">Maximum session length</string>
+    <string name="settings_session_max_duration_summary">%1$d minutes after a session is ongoing, it will stop, and another will start.</string>
     // About view
     <string name="version">Version: %1$s (%2$d)</string>
     <string name="credits">App developed by the ISI-IES research group at Universidad Politécnica de Madrid.</string>
